exports[`no-invalid-well-known-symbol-methods > invalid(1): class Resource {\n\tasync [Symbol.dispose]() {}\n}\n\nusing resource = new Resource(); 1`] = `

  1 | class Resource {
  2 | 	async [Symbol.dispose]() {}
  3 | }
  4 |
  5 | using resource = new Resource();

`;

exports[`no-invalid-well-known-symbol-methods > invalid(1): class Resource {\n\tasync [Symbol.dispose]() {}\n}\n\nusing resource = new Resource(); 2`] = `

Message:
  1 | class Resource {
> 2 | 	async [Symbol.dispose]() {}
    | 	       ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | }
  4 |
  5 | using resource = new Resource();

Output:
  1 | class Resource {
  2 | 	async [Symbol.asyncDispose]() {}
  3 | }
  4 |
  5 | using resource = new Resource();

`;

exports[`no-invalid-well-known-symbol-methods > invalid(10): class Resource {\n\tasync *[Symbol.dispose]() {\n\t\tyield value;\n\t}\n} 1`] = `

  1 | class Resource {
  2 | 	async *[Symbol.dispose]() {
  3 | 		yield value;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(10): class Resource {\n\tasync *[Symbol.dispose]() {\n\t\tyield value;\n\t}\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	async *[Symbol.dispose]() {
    | 	        ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not be a generator. Use a normal method for synchronous disposal or \`Symbol.asyncDispose\` for asynchronous disposal.
  3 | 		yield value;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(11): class Iterable {\n\tasync [Symbol.iterator]() {\n\t\treturn iterator;\n\t}\n} 1`] = `

  1 | class Iterable {
  2 | 	async [Symbol.iterator]() {
  3 | 		return iterator;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(11): class Iterable {\n\tasync [Symbol.iterator]() {\n\t\treturn iterator;\n\t}\n} 2`] = `

Message:
  1 | class Iterable {
> 2 | 	async [Symbol.iterator]() {
    | 	       ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  3 | 		return iterator;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(12): class Iterable {\n\tasync *[Symbol.iterator]() {\n\t\tyield value;\n\t}\n} 1`] = `

  1 | class Iterable {
  2 | 	async *[Symbol.iterator]() {
  3 | 		yield value;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(12): class Iterable {\n\tasync *[Symbol.iterator]() {\n\t\tyield value;\n\t}\n} 2`] = `

Message:
  1 | class Iterable {
> 2 | 	async *[Symbol.iterator]() {
    | 	        ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  3 | 		yield value;
  4 | 	}
  5 | }

Suggestion 1/1: Use \`Symbol.asyncIterator\` instead.:
  1 | class Iterable {
  2 | 	async *[Symbol.asyncIterator]() {
  3 | 		yield value;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(13): const iterable = {\n\tasync [Symbol.iterator]() {\n\t\treturn iterator;\n\t},\n}; 1`] = `

  1 | const iterable = {
  2 | 	async [Symbol.iterator]() {
  3 | 		return iterator;
  4 | 	},
  5 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(13): const iterable = {\n\tasync [Symbol.iterator]() {\n\t\treturn iterator;\n\t},\n}; 2`] = `

Message:
  1 | const iterable = {
> 2 | 	async [Symbol.iterator]() {
    | 	       ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  3 | 		return iterator;
  4 | 	},
  5 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(14): const iterable = {\n\t[Symbol.iterator]: async function () {\n\t\treturn iterator;\n\t},\n}; 1`] = `

  1 | const iterable = {
  2 | 	[Symbol.iterator]: async function () {
  3 | 		return iterator;
  4 | 	},
  5 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(14): const iterable = {\n\t[Symbol.iterator]: async function () {\n\t\treturn iterator;\n\t},\n}; 2`] = `

Message:
  1 | const iterable = {
> 2 | 	[Symbol.iterator]: async function () {
    | 	 ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  3 | 		return iterator;
  4 | 	},
  5 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(15): const iterable = {\n\t[Symbol.iterator]: async () => iterator,\n}; 1`] = `

  1 | const iterable = {
  2 | 	[Symbol.iterator]: async () => iterator,
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(15): const iterable = {\n\t[Symbol.iterator]: async () => iterator,\n}; 2`] = `

Message:
  1 | const iterable = {
> 2 | 	[Symbol.iterator]: async () => iterator,
    | 	 ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(16): class Iterable {\n\t[Symbol.iterator](): Promise<Iterator<unknown>> {\n\t\treturn Promise.resolve(iterator);\n\t}\n} 1`] = `

  1 | class Iterable {
  2 | 	[Symbol.iterator](): Promise<Iterator<unknown>> {
  3 | 		return Promise.resolve(iterator);
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(16): class Iterable {\n\t[Symbol.iterator](): Promise<Iterator<unknown>> {\n\t\treturn Promise.resolve(iterator);\n\t}\n} 2`] = `

Message:
  1 | class Iterable {
> 2 | 	[Symbol.iterator](): Promise<Iterator<unknown>> {
    | 	 ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  3 | 		return Promise.resolve(iterator);
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(17): class AsyncIterable {\n\tasync [Symbol.asyncIterator]() {\n\t\treturn iterator;\n\t}\n} 1`] = `

  1 | class AsyncIterable {
  2 | 	async [Symbol.asyncIterator]() {
  3 | 		return iterator;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(17): class AsyncIterable {\n\tasync [Symbol.asyncIterator]() {\n\t\treturn iterator;\n\t}\n} 2`] = `

Message:
  1 | class AsyncIterable {
> 2 | 	async [Symbol.asyncIterator]() {
    | 	       ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  3 | 		return iterator;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(18): const asyncIterable = {\n\tasync [Symbol.asyncIterator]() {\n\t\treturn iterator;\n\t},\n}; 1`] = `

  1 | const asyncIterable = {
  2 | 	async [Symbol.asyncIterator]() {
  3 | 		return iterator;
  4 | 	},
  5 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(18): const asyncIterable = {\n\tasync [Symbol.asyncIterator]() {\n\t\treturn iterator;\n\t},\n}; 2`] = `

Message:
  1 | const asyncIterable = {
> 2 | 	async [Symbol.asyncIterator]() {
    | 	       ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  3 | 		return iterator;
  4 | 	},
  5 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(19): const asyncIterable = {\n\t[Symbol.asyncIterator]: async () => iterator,\n}; 1`] = `

  1 | const asyncIterable = {
  2 | 	[Symbol.asyncIterator]: async () => iterator,
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(19): const asyncIterable = {\n\t[Symbol.asyncIterator]: async () => iterator,\n}; 2`] = `

Message:
  1 | const asyncIterable = {
> 2 | 	[Symbol.asyncIterator]: async () => iterator,
    | 	 ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(2): class Resource {\n\t[Symbol.dispose](): PromiseLike<void> {\n\t\treturn promise;\n\t}\n} 1`] = `

  1 | class Resource {
  2 | 	[Symbol.dispose](): PromiseLike<void> {
  3 | 		return promise;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(2): class Resource {\n\t[Symbol.dispose](): PromiseLike<void> {\n\t\treturn promise;\n\t}\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	[Symbol.dispose](): PromiseLike<void> {
    | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | 		return promise;
  4 | 	}
  5 | }

Output:
  1 | class Resource {
  2 | 	[Symbol.asyncDispose](): PromiseLike<void> {
  3 | 		return promise;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(20): class AsyncIterable {\n\t[Symbol.asyncIterator] = async () => iterator;\n} 1`] = `

  1 | class AsyncIterable {
  2 | 	[Symbol.asyncIterator] = async () => iterator;
  3 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(20): class AsyncIterable {\n\t[Symbol.asyncIterator] = async () => iterator;\n} 2`] = `

Message:
  1 | class AsyncIterable {
> 2 | 	[Symbol.asyncIterator] = async () => iterator;
    | 	 ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  3 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(21): class AsyncIterable {\n\t[Symbol.asyncIterator](): Promise<AsyncIterator<unknown>> {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 1`] = `

  1 | class AsyncIterable {
  2 | 	[Symbol.asyncIterator](): Promise<AsyncIterator<unknown>> {
  3 | 		return Promise.resolve(asyncIterator);
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(21): class AsyncIterable {\n\t[Symbol.asyncIterator](): Promise<AsyncIterator<unknown>> {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 2`] = `

Message:
  1 | class AsyncIterable {
> 2 | 	[Symbol.asyncIterator](): Promise<AsyncIterator<unknown>> {
    | 	 ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  3 | 		return Promise.resolve(asyncIterator);
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(22): class Resource {\n\t[Symbol.dispose](): Promise<void> {\n\t\treturn Promise.resolve();\n\t}\n} 1`] = `

  1 | class Resource {
  2 | 	[Symbol.dispose](): Promise<void> {
  3 | 		return Promise.resolve();
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(22): class Resource {\n\t[Symbol.dispose](): Promise<void> {\n\t\treturn Promise.resolve();\n\t}\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	[Symbol.dispose](): Promise<void> {
    | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | 		return Promise.resolve();
  4 | 	}
  5 | }

Output:
  1 | class Resource {
  2 | 	[Symbol.asyncDispose](): Promise<void> {
  3 | 		return Promise.resolve();
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(23): type DisposeResult = Promise<void>;\ntype IteratorPromise = Promise<Iterator<unknown>>;\ntype AsyncIteratorResult = Promise<AsyncIterator<unknown>>;\n\nclass ResourceFromInference {\n\t[Symbol.dispose]() {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass ResourceFromAlias {\n\t[Symbol.dispose](): DisposeResult {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass Iterable {\n\t[Symbol.iterator](): IteratorPromise {\n\t\treturn Promise.resolve(iterator);\n\t}\n}\n\nclass AsyncIterableFromInference {\n\t[Symbol.asyncIterator]() {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n}\n\nclass AsyncIterableFromAlias {\n\t[Symbol.asyncIterator](): AsyncIteratorResult {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 1`] = `

Filename: file.ts

   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.dispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.dispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(23): type DisposeResult = Promise<void>;\ntype IteratorPromise = Promise<Iterator<unknown>>;\ntype AsyncIteratorResult = Promise<AsyncIterator<unknown>>;\n\nclass ResourceFromInference {\n\t[Symbol.dispose]() {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass ResourceFromAlias {\n\t[Symbol.dispose](): DisposeResult {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass Iterable {\n\t[Symbol.iterator](): IteratorPromise {\n\t\treturn Promise.resolve(iterator);\n\t}\n}\n\nclass AsyncIterableFromInference {\n\t[Symbol.asyncIterator]() {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n}\n\nclass AsyncIterableFromAlias {\n\t[Symbol.asyncIterator](): AsyncIteratorResult {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 2`] = `

Message:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
>  6 | 	[Symbol.dispose]() {
     | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.dispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

Output:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.asyncDispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.dispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(23): type DisposeResult = Promise<void>;\ntype IteratorPromise = Promise<Iterator<unknown>>;\ntype AsyncIteratorResult = Promise<AsyncIterator<unknown>>;\n\nclass ResourceFromInference {\n\t[Symbol.dispose]() {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass ResourceFromAlias {\n\t[Symbol.dispose](): DisposeResult {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass Iterable {\n\t[Symbol.iterator](): IteratorPromise {\n\t\treturn Promise.resolve(iterator);\n\t}\n}\n\nclass AsyncIterableFromInference {\n\t[Symbol.asyncIterator]() {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n}\n\nclass AsyncIterableFromAlias {\n\t[Symbol.asyncIterator](): AsyncIteratorResult {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 3`] = `

Message:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.dispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
> 12 | 	[Symbol.dispose](): DisposeResult {
     | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

Output:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.dispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.asyncDispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(23): type DisposeResult = Promise<void>;\ntype IteratorPromise = Promise<Iterator<unknown>>;\ntype AsyncIteratorResult = Promise<AsyncIterator<unknown>>;\n\nclass ResourceFromInference {\n\t[Symbol.dispose]() {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass ResourceFromAlias {\n\t[Symbol.dispose](): DisposeResult {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass Iterable {\n\t[Symbol.iterator](): IteratorPromise {\n\t\treturn Promise.resolve(iterator);\n\t}\n}\n\nclass AsyncIterableFromInference {\n\t[Symbol.asyncIterator]() {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n}\n\nclass AsyncIterableFromAlias {\n\t[Symbol.asyncIterator](): AsyncIteratorResult {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 4`] = `

Message:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.dispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.dispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
> 18 | 	[Symbol.iterator](): IteratorPromise {
     | 	 ^^^^^^^^^^^^^^^ \`Symbol.iterator\` must return a sync iterator. Use \`Symbol.asyncIterator\` for async iterators.
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(23): type DisposeResult = Promise<void>;\ntype IteratorPromise = Promise<Iterator<unknown>>;\ntype AsyncIteratorResult = Promise<AsyncIterator<unknown>>;\n\nclass ResourceFromInference {\n\t[Symbol.dispose]() {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass ResourceFromAlias {\n\t[Symbol.dispose](): DisposeResult {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass Iterable {\n\t[Symbol.iterator](): IteratorPromise {\n\t\treturn Promise.resolve(iterator);\n\t}\n}\n\nclass AsyncIterableFromInference {\n\t[Symbol.asyncIterator]() {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n}\n\nclass AsyncIterableFromAlias {\n\t[Symbol.asyncIterator](): AsyncIteratorResult {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 5`] = `

Message:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.dispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.dispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
> 24 | 	[Symbol.asyncIterator]() {
     | 	 ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
  30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(23): type DisposeResult = Promise<void>;\ntype IteratorPromise = Promise<Iterator<unknown>>;\ntype AsyncIteratorResult = Promise<AsyncIterator<unknown>>;\n\nclass ResourceFromInference {\n\t[Symbol.dispose]() {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass ResourceFromAlias {\n\t[Symbol.dispose](): DisposeResult {\n\t\treturn Promise.resolve();\n\t}\n}\n\nclass Iterable {\n\t[Symbol.iterator](): IteratorPromise {\n\t\treturn Promise.resolve(iterator);\n\t}\n}\n\nclass AsyncIterableFromInference {\n\t[Symbol.asyncIterator]() {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n}\n\nclass AsyncIterableFromAlias {\n\t[Symbol.asyncIterator](): AsyncIteratorResult {\n\t\treturn Promise.resolve(asyncIterator);\n\t}\n} 6`] = `

Message:
   1 | type DisposeResult = Promise<void>;
   2 | type IteratorPromise = Promise<Iterator<unknown>>;
   3 | type AsyncIteratorResult = Promise<AsyncIterator<unknown>>;
   4 |
   5 | class ResourceFromInference {
   6 | 	[Symbol.dispose]() {
   7 | 		return Promise.resolve();
   8 | 	}
   9 | }
  10 |
  11 | class ResourceFromAlias {
  12 | 	[Symbol.dispose](): DisposeResult {
  13 | 		return Promise.resolve();
  14 | 	}
  15 | }
  16 |
  17 | class Iterable {
  18 | 	[Symbol.iterator](): IteratorPromise {
  19 | 		return Promise.resolve(iterator);
  20 | 	}
  21 | }
  22 |
  23 | class AsyncIterableFromInference {
  24 | 	[Symbol.asyncIterator]() {
  25 | 		return Promise.resolve(asyncIterator);
  26 | 	}
  27 | }
  28 |
  29 | class AsyncIterableFromAlias {
> 30 | 	[Symbol.asyncIterator](): AsyncIteratorResult {
     | 	 ^^^^^^^^^^^^^^^^^^^^ \`Symbol.asyncIterator\` must return an async iterator directly. Use an async generator or return the iterator synchronously.
  31 | 		return Promise.resolve(asyncIterator);
  32 | 	}
  33 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(3): class Resource {\n\t[Symbol.dispose](): Promise<void> | void {\n\t\treturn Promise.resolve();\n\t}\n} 1`] = `

  1 | class Resource {
  2 | 	[Symbol.dispose](): Promise<void> | void {
  3 | 		return Promise.resolve();
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(3): class Resource {\n\t[Symbol.dispose](): Promise<void> | void {\n\t\treturn Promise.resolve();\n\t}\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	[Symbol.dispose](): Promise<void> | void {
    | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | 		return Promise.resolve();
  4 | 	}
  5 | }

Output:
  1 | class Resource {
  2 | 	[Symbol.asyncDispose](): Promise<void> | void {
  3 | 		return Promise.resolve();
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(4): const object = {\n\tasync [Symbol.dispose]() {},\n}; 1`] = `

  1 | const object = {
  2 | 	async [Symbol.dispose]() {},
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(4): const object = {\n\tasync [Symbol.dispose]() {},\n}; 2`] = `

Message:
  1 | const object = {
> 2 | 	async [Symbol.dispose]() {},
    | 	       ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | };

Output:
  1 | const object = {
  2 | 	async [Symbol.asyncDispose]() {},
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(5): const object = {\n\t[Symbol.dispose]: async function () {},\n}; 1`] = `

  1 | const object = {
  2 | 	[Symbol.dispose]: async function () {},
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(5): const object = {\n\t[Symbol.dispose]: async function () {},\n}; 2`] = `

Message:
  1 | const object = {
> 2 | 	[Symbol.dispose]: async function () {},
    | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | };

Output:
  1 | const object = {
  2 | 	[Symbol.asyncDispose]: async function () {},
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(6): const object = {\n\t[Symbol.dispose]: async () => {},\n}; 1`] = `

  1 | const object = {
  2 | 	[Symbol.dispose]: async () => {},
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(6): const object = {\n\t[Symbol.dispose]: async () => {},\n}; 2`] = `

Message:
  1 | const object = {
> 2 | 	[Symbol.dispose]: async () => {},
    | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | };

Output:
  1 | const object = {
  2 | 	[Symbol.asyncDispose]: async () => {},
  3 | };

`;

exports[`no-invalid-well-known-symbol-methods > invalid(7): class Resource {\n\tstatic async [Symbol.dispose]() {}\n} 1`] = `

  1 | class Resource {
  2 | 	static async [Symbol.dispose]() {}
  3 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(7): class Resource {\n\tstatic async [Symbol.dispose]() {}\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	static async [Symbol.dispose]() {}
    | 	              ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | }

Output:
  1 | class Resource {
  2 | 	static async [Symbol.asyncDispose]() {}
  3 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(8): class Resource {\n\t[Symbol.dispose] = async function () {};\n} 1`] = `

  1 | class Resource {
  2 | 	[Symbol.dispose] = async function () {};
  3 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(8): class Resource {\n\t[Symbol.dispose] = async function () {};\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	[Symbol.dispose] = async function () {};
    | 	 ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not return a Promise. Use \`Symbol.asyncDispose\` instead.
  3 | }

Output:
  1 | class Resource {
  2 | 	[Symbol.asyncDispose] = async function () {};
  3 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(9): class Resource {\n\t*[Symbol.dispose]() {\n\t\tyield value;\n\t}\n} 1`] = `

  1 | class Resource {
  2 | 	*[Symbol.dispose]() {
  3 | 		yield value;
  4 | 	}
  5 | }

`;

exports[`no-invalid-well-known-symbol-methods > invalid(9): class Resource {\n\t*[Symbol.dispose]() {\n\t\tyield value;\n\t}\n} 2`] = `

Message:
  1 | class Resource {
> 2 | 	*[Symbol.dispose]() {
    | 	  ^^^^^^^^^^^^^^ \`Symbol.dispose\` must not be a generator. Use a normal method for synchronous disposal or \`Symbol.asyncDispose\` for asynchronous disposal.
  3 | 		yield value;
  4 | 	}
  5 | }

`;
